# algorithms

./: .gitignore  .pycrunch-config.yaml  Makefile  Pipfile  README.md  bootstrap.sh  justfile  pyproject.toml  requirements.txt  setup.cfg
algorithmic_toolbox/: 1_sumTwoDigits.py
examples/: anagrams.py
problem_template/: cookiecutter.json
src/: after_the_rain.py  anagrams.py  autocomplete_system.py  balance_parenthesis.py  bird_language.py  check_brackets.py  currency_arbitrage.py  decomposition_pair.py  edit_distance.py  find_repeated_in_sorted_arrays.py  find_the_gap.py  hopscotch.py  justify.py  largest_adjacent_sum.py  maze.py  memory_efficient_random.py  monte_carlo_pi.py  multiples_generator.py  multiplier.py  nested_lists.py  no_odd_digits.py  radix_search.py  reconstruct_sentence.py  regexs.py  run_lenght_encoding.py  run_length_encoding.py  running_median.py  simple_job_scheduler.py  sort_colors_rgb.py  staircase_silly_walks.py  sum_of_even_fibonacci_numbers.py  the_product_of_others.py  tree_again.py  twisted_pair.py  uncertain_decoder.py  universal_trees.py  xor_list.py
tests/: conftest.py  test__191110__recostruct_sentence.py  test__after_the_rain.py  test__anagrams.py  test__autocomplete_system.py  test__balance_parenthesis.py  test__bird_language.py  test__check_brackets.py  test__currency_arbitrage.py  test__decomposition_pair.py  test__edit_distance.py  test__find_repeated_in_sorted_arrays.py  test__find_the_gap.py  test__hopscotch.py  test__justify.py  test__largest_adjacent_sum.py  test__maze.py  test__memory_efficient_random.py  test__regexs.py  (+25 more)
(+51 files in other folders)
