[project]
name = "algorithms"
version = "0.1.0"
description = "Algorithm implementations and problem solving practice"
requires-python = ">=3.8"
dependencies = [
    "black",
    "ipython",
    "pdbpp",
    "pytest",
    "pytest-cov",  # Using pytest-cov instead of pytest-coverage
    "pytest-watch",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "cookiecutter",
]

# No build system needed for algorithms collection
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    ".",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest-sugar>=1.0.0",
]
